[package]
name = "serverless-web"
version = "0.0.0"
edition = "2024"
description = "Wrapper around multiple serverless Rust web frameworks"
license = "MIT OR Apache-2.0"

[dependencies]
fastly = { version = "0.11.6", optional = true }
worker = { version = "0.6.5", optional = true }
spin-sdk = { version = "5.0.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
http = "1.3.1"

[features]
fastly = ["dep:fastly"]
cf_workers = ["dep:worker"]
spin = ["dep:spin-sdk"]
serde = ["dep:serde"]
